# zcash-vote-monorepo

./: .gitmodules  Cargo.toml  planning.md
zcash-vote/: Cargo.toml
zcash-vote-app/: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts
zcash-vote-app/.github/workflows/: build-android.yml  build-linux.yml  build-mac.yml  build-win.yml
zcash-vote-app/src/: App.tsx  Delegate.tsx  Election.tsx  History.tsx  Overview.tsx  SetElectionMessage.tsx  Vote.tsx  types.d.ts
zcash-vote-app/src-tauri/: Cargo.toml  build.gradle.kts.patch  tauri.conf.json
zcash-vote-app/src-tauri/src/: address.rs  db.rs  download.rs  lib.rs  main.rs  state.rs  trees.rs  validate.rs  vote.rs
zcash-vote-audit/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
zcash-vote-audit/.github/workflows/: build-linux.yml  build-mac-uni.yml  build-mac.yml  build-win.yml
zcash-vote-audit/src/: App.tsx
zcash-vote-audit/src-tauri/: Cargo.toml  tauri.conf.json
zcash-vote-audit/src-tauri/src/: lib.rs  main.rs
zcash-vote-create/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
zcash-vote-create/.github/workflows/: build-linux.yml  build-mac.yml  build-win.yml
zcash-vote-create/src/: App.tsx  Spinner.tsx  index.css
zcash-vote-create/src-tauri/: Cargo.toml  tauri.conf.json
zcash-vote-create/src-tauri/src/: lib.rs  main.rs
zcash-vote-server/: Cargo.toml
