[package]
name = "zcash-vote-audit"
version = "0.1.0"
description = "Audit a zcash election"
authors = ["hanh425@gmail.com"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zcash_vote_audit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip0039 = "0.9.0"
reqwest = { version = "0.11.27", features = ["json"] }
pasta_curves = "0.5.1"

zcash-vote = {git = "https://github.com/hhanh00/zcash-vote.git", rev="8b42736"}
orchard = "0.3.0"
