[package]
name = "zcash-vote-create"
version = "0.1.0"
description = "Create a Zcash election"
authors = ["hanh00"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "create_election_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip0039 = "0.9.0"
slug = "0.1.6"
rusqlite = "0.29.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
hex = "0.4.3"

#zcash-vote = {git = "https://github.com/hhanh00/zcash-vote.git", rev="8b42736"}
zcash-vote = {path = "../../zcash-vote"}
orchard = "0.3.0"

[patch.crates-io]
orchard = { path = "../../orchard" }
#orchard = {git = "https://github.com/hhanh00/orchard.git", rev="a2ec07c"}
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }

[profile.dev]
opt-level = 3
debug = true
